# covid-pandas-data-experiments

./: confirmed.csv  deaths.csv  pyproject.toml  recovered.csv
python_data/: main.py
tests/: test_python_data.py
