[tool.poetry]
name = "python-data"
version = "0.1.0"
description = ""
authors = ["Tom Poczos <t.poczos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
pylint = "^2.4.4"

[tool.poetry.scripts]
main = "python_data.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

